--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Address Book</h1>
+  <h1>Users</h1>
   <ul id="user-list"></ul>
 </body>
 <script src="./main.js"></script>
